--- a/packaging/branding/ovirt.brand/web_admin.css
+++ b/packaging/branding/ovirt.brand/web_admin.css
@@ -58,9 +58,14 @@ These classes allow you to customize the header at the top of the screen */
     padding-right: 10px;
 }
 
-/* guide me dialogs */
+/* GuidePopupView.ui.xml:
+This class allows you to change the error icon on the guide popup window. */
 .obrand_dialogLogoGuideImage {
-    background-image: url(images/dialog/guide.png);
-    width: 27px;
+    background: url(images/dialog/guide.png);
+    background-repeat: no-repeat;
+    width: 24px;
     height: 27px;
+    position: relative;
+    left: -7px;
+    border: 0px;
 }
